forgot pass part 1

--- a/ASI.Basecode.WebApp/Views/Account/Login.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/Login.cshtml
@@ -34,7 +34,7 @@
                         </div>
                         <div class="mb-3 form-link">
                             <a class="redirect-forgot-password text-link" style="color:dimgray;"
-                               asp-controller="Account" asp-action="ForgotPass">Forgot your password?</a>
+                               asp-controller="Account" asp-action="ForgotPassword">Forgot your password?</a>
                         </div>
                         @* <div class="mb-3 form-link">
                             <span style="color:dimgray;">
