--- a/ASI.Basecode.WebApp/Views/Account/VerifyCode.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/VerifyCode.cshtml
@@ -1,9 +1,9 @@
-@section styles {
+﻿@section styles {
     <link rel="stylesheet" href="~/css/login.css" />
 }
 @{
 
-    ViewData["Title"] = "ForgotPass";
+    ViewData["Title"] = "ForgotPassword";
 }
 
 
@@ -21,7 +21,7 @@
 
         <div class="card">
             <div class="header">Forgot Password?</div>
-            <div class="subtitle">Please enter the email you use to sign in to Skooby. We will send you a link to reset your password.</div>
+            <div class="subtitle">Please enter the verification code sent to your email..</div>
 
             <input type="email" class="input-field required" name="email" placeholder="Email" required>
 
