forgot pass part 2

--- a/ASI.Basecode.WebApp/Views/Account/ForgotPassword.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/ForgotPassword.cshtml
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="~/css/login.css" />
 }
 @{
-
+    ViewBag.LoginView = true;
     ViewData["Title"] = "ForgotPassword";
 }
 
@@ -25,8 +25,10 @@
 
             <form asp-action="ForgotPassword" method="post">
                 <input type="email" class="input-field required" name="Email" placeholder="Email" required>
-                <button type="submit" class="btn btn-danger">Send Password Request</button>
+                <br />
+                <button class="button" type="submit">Send Password Request</button>
             </form>
+            <br />
             <a href="/">Go back home</a>
         </div>
     </div>
