--- a/ASI.Basecode.WebApp/Views/Account/VerifyCode.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/VerifyCode.cshtml
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="~/css/login.css" />
 }
 @{
-
+    ViewBag.LoginView = true;
     ViewData["Title"] = "ForgotPassword";
 }
 
