--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -59,7 +59,7 @@
                         <th>User Id</th>
                         <th>Email</th>
                         <th>Username</th>
-                        <th>Actions</th>
+                        <th >Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -69,10 +69,10 @@
                             <td class="user-id">@user.Id</td>
                             <td>@user.Email</td>
                             <td>@user.UserName</td>
-                            <td>
-                                <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-success btn-primary">Edit</a>
+                            <td class="action-buttons">
+                                <a asp-action="Edit" asp-route-id="@user.Id" class="btn action-padding btn-success btn-primary">Edit</a>
                                 <form asp-action="Delete" asp-route-id="@user.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this?');">
-                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                    <button type="submit" class="btn action-padding btn-danger">Delete</button>
                                 </form>
                             </td>
                         </tr>
