--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -90,13 +90,13 @@ integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2
                     <td>
                         @string.Join(", ", book.GenreNames)
                     </td>
-                    <td>
+                    <td class="action-buttons">
                         <a href="@Url.Action("Details", "Book", new { id = book.Id })"
-                            class="btn btn-info btn-primary">Details</a>
+                            class="btn action-padding btn-info btn-primary">Details</a>
                         <a href="@Url.Action("Edit", "Book", new { id = book.Id })"
-                            class="btn btn-success btn-primary">Edit</a>
+                           class="btn action-padding btn-success btn-primary">Edit</a>
                         <button data-url="@Url.Action("Delete", "Book", new { id = book.Id })" type="button"
-                            class="btn btn-danger">
+                                class="btn action-padding btn-danger">
                             Delete
                         </button>
                     </td>
