--- a/ASI.Basecode.WebApp/Views/Reviews/Edit.cshtml
+++ b/ASI.Basecode.WebApp/Views/Reviews/Edit.cshtml
@@ -5,48 +5,75 @@
     ViewData["Title"] = "Edit Review";
 }
 
-<h2>Edit Review</h2>
+<h2 class="form-title">Edit Review</h2>
 
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="Id" />
+    <div class="form-container container">
+     
+        <div class="row">
+                <div class="col">
+                <div class="form-group">
+                    <label asp-for="ReviewedBy" class="control-label"></label>
+                    <input asp-for="ReviewedBy" class="form-control" />
+                    <span asp-validation-for="ReviewedBy" class="text-danger"></span>
+                </div>
+                    
+                 </div>
+                <div class="col">
+                <div class="form-group">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                        
+                    
+                </div>
+            </div>
+         
 
-    <div class="form-group">
-        <label asp-for="ReviewedBy" class="control-label"></label>
-        <input asp-for="ReviewedBy" class="form-control" />
-        <span asp-validation-for="ReviewedBy" class="text-danger"></span>
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="Description" class="control-label"></label>
+                    <textarea asp-for="Description" class="form-control"></textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="Rating" class="control-label"></label>
+                    <input asp-for="Rating" class="form-control" type="number" min="1" max="5" />
+                    <span asp-validation-for="Rating" class="text-danger"></span>
+                </div>
+                
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="BookId" class="control-label"></label>
+                    <input asp-for="BookId" class="form-control" type="number" />
+                    <span asp-validation-for="BookId" class="text-danger"></span>
+                </div>
+               
+            </div>
+        </div>
+         
+        <div class="row">
+            <div class="col">
+                <div class="col-right col-center">
+                    <div class="form-group">
+                        <a class="btn-back btn-padd" asp-action="Index">Back to List</a>
+                        <input class="btn-padd btn btn-success" type="submit" value="Update" /> 
+                    </div>
+                </div>
+                </div>
+        </div>  
+
     </div>
-
-    <div class="form-group">
-        <label asp-for="Email" class="control-label"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Description" class="control-label"></label>
-        <textarea asp-for="Description" class="form-control"></textarea>
-        <span asp-validation-for="Description" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Rating" class="control-label"></label>
-        <input asp-for="Rating" class="form-control" type="number" min="1" max="5" />
-        <span asp-validation-for="Rating" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="BookId" class="control-label"></label>
-        <input asp-for="BookId" class="form-control" type="number" />
-        <span asp-validation-for="BookId" class="text-danger"></span>
-    </div>
-
-    <!-- Since BookName is likely derived from BookId, it's typically not editable -->
-
-    <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-primary" />
-        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-    </div>
-</form>
+  </form>
 
 @section Scripts {
     @{
