fix forgotpassword ui

--- a/ASI.Basecode.WebApp/Views/Account/ForgotPassword.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/ForgotPassword.cshtml
@@ -24,9 +24,9 @@
             <div class="subtitle">Please enter the email you use to sign in to Skooby. We will send you a link to reset your password.</div>
 
             <form asp-action="ForgotPassword" method="post">
-                <input type="email" class="input-field required" name="Email" placeholder="Email" required>
+                <input type="email" class="input-field required mb-3" name="Email" placeholder="Email" required>
                 <br />
-                <button class="button" type="submit">Send Password Request</button>
+                <button type="submit" class="btn btn-primary login-btn" style="width:440px;">Send Reset Link</button>
             </form>
             <br />
             <a href="/">Go back home</a>
