filtering for new and top rated books

--- a/Skooby.WebApp/Views/Home/NewBooks.cshtml
+++ b/Skooby.WebApp/Views/Home/NewBooks.cshtml
@@ -57,7 +57,7 @@
                     }
                     @foreach (var book in recentBooks)
                     {
-                        <div class="book-content">
+                        <div class="book-content" data-genres="@string.Join(", ", book.GenreNames)">
                             <a href="@Url.Action("ViewBook", "Home", new { id = book.Id })">
                                 <div class="book-image-preview">
                                     <img class="book-image" src="@(String.IsNullOrEmpty(book.Image) ? "/img/book-image-filler.png" : book.Image)" alt="@book.Name" />
@@ -204,3 +204,63 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        // Initially hide remaining genres
+        var isSeeMore = true;
+        var remainingGenres = @Json.Serialize(remainingGenres);
+
+        $("#seeMoreLink").click(function (e) {
+            e.preventDefault();
+
+            if (isSeeMore) {
+                showRemainingGenres();
+                $("#seeMoreLink").find(".filter-category").text("See Less");
+            } else {
+                hideRemainingGenres();
+                $("#seeMoreLink").find(".filter-category").text("See More");
+            }
+
+            isSeeMore = !isSeeMore;
+        });
+
+        function showRemainingGenres() {
+            var remainingGenresContainer = $("#filterCategoryContainer");
+
+            for (var i = 0; i < remainingGenres.length; i++) {
+                var genre = remainingGenres[i];
+                var genreLink = $("<a>").attr("href", "#").addClass("genre-link").data("genre", genre);
+                var genreTitle = $("<p>").addClass("filter-category-titles").text(genre);
+                genreLink.append(genreTitle);
+                remainingGenresContainer.append(genreLink);
+            }
+        }
+
+        function hideRemainingGenres() {
+
+            $(".genre-link").not(":lt(13)").remove();
+        }
+
+    });
+</script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('.filter-category-titles').click(function () {
+            var selectedGenre = $(this).text().trim();
+
+            // Hide all books initially
+            $('.book-content').hide();
+
+            // Filter and show books that match the selected genre
+            $('.book-content').filter(function () {
+                var genres = $(this).data('genres').split(', ');
+                return genres.includes(selectedGenre);
+            }).show();
+        });
+    });
+</script>
